content/deploy/run-rhel-support-tools-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  generateName: rhel-support-tools-
spec:
  containers:
    - name: tools
      image: registry.redhat.io/rhel9/support-tools:latest
      command:
        - "/bin/sh"
        - "-c"
        - "sleep infinity"
  restartPolicy: Never
