content/deploy/ubi-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubi
spec:
  containers:
    - name: registry.access.redhat.com/ubi9/ubi-micro:latest
      image: ubi
      command:
        - "/bin/sh"
        - "-c"
        - "sleep infinity"
  restartPolicy: Never
