content/deploy/deployment-simple-nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-nginx
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: simple-nginx
  template:
    metadata:
      labels:
        app: simple-nginx
    spec:
      automountServiceAccountToken: false
      volumes:
        - name: docroot
          emptyDir: {}
      containers:
      - image: registry.access.redhat.com/ubi8/nginx-120
        name: nginx
        securityContext:
          readOnlyRootFilesystem: true
        resources:
          limits:
            ephemeral-storage: 40Mi
            cpu: 0.1
            memory: "20Mi"
          requests:
            ephemeral-storage: 20Mi
            cpu: 0.1
            memory: "20Mi"
        volumeMounts:
          - name: docroot
            mountPath: /opt/app-root/src/
        command:
          - /bin/sh
          - -c
          - |

            set -x

            echo "Greetings from $POD_NAME" >> /opt/app-root/src/index.html

            nginx -g "daemon off;"

  triggers:
  - type: ConfigChange
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simple-nginx
  name: simple-nginx
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: simple-nginx
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: simple-nginx
  name: simple-nginx
spec:
  port:
    targetPort: 8080
  to:
    kind: "Service"
    name: simple-nginx
    weight: null
  tls:
    termination: Edge
    insecureEdgeTerminationPolicy: Redirect
